# pcb-tools

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  benchmark.sh  ghci.conf  package.yaml  pcb-tools.cabal  stack.yaml
app/: DrawGerber.hs  GCoder.hs  GenerateGerber.hs  GenerateGerberTemplates.hs  Main.hs  ParMapReduce.hs  _Main.hs  __Main.hs  drillmerge.hs
docs/: excellon.ebnf  gerber.ebnf  paper.tex  regenerate_grammars.sh
example/: back.gbr  edge.gbr  izolator.gbr  linkit.gbr  long.gbr  minimal.gbr  plain.grb  reference1.gbr  scale.drd  scale.gbr  scale_short.gbr  stmstamp.gbr  very-simple.gbr
grammar/: Gerber.cf  GerberAST.cf
obsolete/: GeometryPlayground.hs
obsolete/grammar/: GerberAST.cf
src/: Lib.hs  PCBTools.hs
src/Data/: Excellon.hs  Gerber.hs
src/Data/Excellon/: Interpreter.hs  Parser.hs  Types.hs
src/Data/Gerber/: Abs.hs  ApplicativeParser.hs  Doc.txt  ErrM.hs  Interpreter.hs  Lex.x  Par.y  Parser.hs  Print.hs  SampleData.hs  Skel.hs  Test.hs  Types.hs
src/Data/Gerber/GerberAST/: Abs.hs  Doc.txt  ErrM.hs  Lex.x  Par.y  Print.hs  Skel.hs  Test.hs
src/PCBTools/: Common.hs
