name:                pcb-tools
version:             0.1.0.0
synopsis:            Gerber & Excellon parser
description:         Please see README.md
homepage:            https://github.com/githubuser/pcb-tools
license:             BSD3
license-file:        LICENSE
author:              Adam Lucansky
maintainer:          adamlucansky@gmail.com
copyright:           2017 Troll
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Data.Gerber
                     , Data.Gerber.Parser
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     --, megaparsec
                     , mtl
                     , pretty-simple
                     --, hspec
                     , scientific
                     , hgeometry
  default-language:    Haskell2010

executable gerberhs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pcb-tools
                     , hgeometry
                     , semigroups
  default-language:    Haskell2010

test-suite gerberhs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gerberhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/gerberhs
